@@ -391,9 +391,7 @@
 					<systemPropertyVariables>
 						<es.caib.notib.properties.path>src/test/resources/es/caib/notib/core/test.properties</es.caib.notib.properties.path>
 					</systemPropertyVariables>
-					<argLine>
-						--add-opens java.base/java.lang=ALL-UNNAMED
-					</argLine>
+<!--					<argLine>-XX:MaxPermSize=512m</argLine>-->
 				</configuration>
             </plugin>
 			<plugin>
